# NuGeometry

./: .gitignore  CMakeLists.txt  setup.py
.github/workflows/: cmake.yml
CMake/: nugeometry-config.cmake.in
include/geom/: Camera.hh  Element.hh  Geometry.hh  Interface.hh  LineSegment.hh  Logging.hh  Material.hh  Parser.hh  PythonInterface.hh  Ray.hh  Shape.hh  System.hh  System.hh.in  Transform3D.hh  Units.hh  Utilities.hh  Vector2D.hh  Vector3D.hh  Vector4D.hh  Volume.hh  World.hh
include/interactive/: Camera.hh  Input.hh  Renderer.hh
jupyter/: Tutorial.ipynb
src/: CMakeLists.txt
src/geom/: CMakeLists.txt  Element.cc  Interface.cc  Logging.cc  Material.cc  Parser.cc  PythonInterface.cc  Shape.cc  Transform3D.cc  Vector2D.cc  Vector3D.cc  Volume.cc  World.cc  main.cc  prob.cc
src/interactive/: CMakeLists.txt  Renderer.cc  main_sfml.cc
test/: CMakeLists.txt  test_element.cc  test_material.cc  test_parser.cc  test_rotations.cc  test_shape.cc  test_translations.cc  test_volume.cc
